--- a/frontend_ecommerce/public/css/custom.css
+++ b/frontend_ecommerce/public/css/custom.css
@@ -1,3 +1,15 @@
+/* VARIABLES - class properties */
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+img {
+  max-width: 100%;
+}
+input.modified-input::placeholder {
+  background-color: #bac7e8;
+}
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +22,6 @@
   font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
-
 body {
   font-family: "Montserrat", Helvetica, Arial, sans-serif;
   font-weight: 300;
@@ -19,54 +30,47 @@ body {
   color: #000;
   background: #D3D3D3;
 }
-
+#id1 {
+  height: 10%;
+  width: 100%;
+  background-color: white;
+  text-align: center;
+}
+#id2 {
+  height: 20%;
+  width: 100%;
+  background-color: #D3D3D3;
+  position: relative;
+}
+#id3 {
+  height: 35%;
+  width: 100%;
+  background-color: #808080;
+}
+#id4 {
+  height: 100%;
+  width: 100%;
+  background-color: #D3D3D3;
+}
+#overlay {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 200;
+  left: 400;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  display: block;
+}
 .container {
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
   position: relative;
 }
-
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea,
-#contact button[type="submit"] {
-  font: 400 12px/16px "Montserrat", Helvetica, Arial, sans-serif;
-}
-
-#contact {
-  background: #F9F9F9;
-  padding: 25px;
-  /*margin: 150px 0;*/
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-
-#contact h3 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500; /* black */	
-  display: block;
-  /*font-size: 30px;*/
-  margin-bottom: 10px;
-}
-
-#contact h4 {
-  margin: 5px 0 15px;
-  display: block;
-  font-size: 13px;
-  font-weight: 400;
-}
-
-fieldset {
-  border: medium none !important;
-  margin: 0 0 10px;
-  min-width: 100%;
-  padding: 0;
-  width: 100%;
-}
-
-
+.styles_input_form,
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
@@ -78,7 +82,7 @@ fieldset {
   margin: 0 0 5px;
   padding: 10px;
 }
-
+.styles_input_form_hover,
 #contact input[type="text"]:hover,
 #contact input[type="email"]:hover,
 #contact input[type="tel"]:hover,
@@ -89,45 +93,60 @@ fieldset {
   transition: border-color 0.3s ease-in-out;
   border: 1px solid #aaa;
 }
-
-#contact textarea {
-  height: 100px;
-  max-width: 100%;
-  resize: none;
+#contact {
+  background: #F9F9F9;
+  padding: 25px;
+  margin: 30px 0;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-
+#contact h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  /* black */
+  font-size: 20px;
+  display: block;
+  /*font-size: 30px;*/
+  margin-bottom: 10px;
+}
+#contact h4 {
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+}
 #contact button[type="submit"] {
   cursor: pointer;
   width: 100%;
   border: none;
-  background: red;
+  background: #FF0000;
   color: #FFF;
   margin: 0 0 5px;
   padding: 10px;
   font-size: 15px;
+  font: "Montserrat", Helvetica, Arial, sans-serif;
 }
-
 #contact button[type="submit"]:hover {
-	background: #FF3232;
+  background: #FF3232;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
 }
-
 #contact button[type="submit"]:active {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
-
-.copyright {
-  text-align: center;
-}
-
 #contact input:focus,
 #contact textarea:focus {
   outline: 0;
   border: 1px solid #aaa;
 }
-
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+}
+/*
 ::-webkit-input-placeholder {
   color: #888;
 }
@@ -143,465 +162,192 @@ fieldset {
 :-ms-input-placeholder {
   color: #888;
 }
-
-
-
-
-.logo-respond	{
-		height: 100px;
-		width: 600px;
-		max-width: 600px;
-		min-width: 280px;
-		margin: 0 auto;
-		display: block;
-		}
-		
-	
-
-@media all and (min-width: 1024px) and (max-width: 1780px) { 
-
+*/
+/*############################################
+###########  MEDIA QUERIES ###################	
+##############################################*/
 .container {
-  max-width: 600px;
   width: 100%;
   margin: 0 auto;
   position: relative;
 }
-
-#wrapper-inner-div-form{
-	margin: auto;
-	width: 600px;
-}
-.form-wrapper-clear:after{
-	clear: both;
-	display: table;
-	content: "";
-}
-	
-.cls-form-left{
-	width: 250px;
-	float:left
-}
-
-.cls-form-right{
-	width: 300px;
-	float:left ; 
-	padding-left:30px; 
-}
-
-
 .modal0 {
-  z-index: 3; /* Sit on top */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  z-index: 3;
+  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.4);
   display: none;
   position: absolute;
   top: 0% ;
-  width: 600px; 
-  height: 390px;
-  /*max-height: 100%;*/
 }
-
-/* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 0% auto; /* 15% from the top and centered */
+  margin: 0% auto;
   padding: 0px;
   border: 1px solid white;
-  height: 100%;
-  /*width: 100%; *//* Could be more or less, depending on screen size */
   position: relative;
 }
-
 .inner {
-  margin: 10% auto; /* 15% from the top and centered */
+  margin: 10% auto;
   padding: 20px;
-  /*border: 1px solid #888;*/
-  width: 40%; /* Could be more or less, depending on screen size */
-  /*position: relative;*/
-  height: 400px !important;
-  /*display: flex;
-  align-items: center;*/
 }
-
-.inner-item{
-	text-align:center;
-	line-height: 20px;
-	
+.inner-item {
+  text-align: center;
 }
-
-.inner-item-0{
-	margin: auto;
-	width: 100%;
-	padding: 10px;
+.inner-item-0 {
+  margin: auto;
 }
-
+@media all and (min-width: 1024px) and (max-width: 1780px) {
+  .container {
+    max-width: 600px;
+  }
+  .modal0 {
+    width: 600px;
+    height: 390px;
+  }
+  .modal-content {
+    height: 100%;
+  }
+  .inner {
+    width: 40%;
+    height: 400px !important;
+  }
+  .inner-item {
+    line-height: 20px;
+  }
+  .inner-item-0 {
+    width: 100%;
+    padding: 10px;
+  }
+  #wrapper-inner-div-form {
+    margin: auto;
+    width: 600px;
+  }
+  .form-wrapper-clear:after {
+    clear: both;
+    display: table;
+    content: "";
+  }
+  .cls-form-left {
+    width: 250px;
+    float: left;
+  }
+  .cls-form-right {
+    width: 300px;
+    float: left ;
+    padding-left: 30px;
+  }
+  .cls-form-right fieldset textarea {
+    height: 200px;
+  }
 }
-
-@media all and (min-width: 768px) and (max-width: 1024px) { 
-
-
-
-
-}
-
-@media all and (min-width: 480px) and (max-width: 768px) { }
-
-@media all and (max-width: 480px) { }
-
-
-
-
-* 
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
-
-/*
-@media (min-width: 1281px) {
-
-.container {
-  max-width: 600px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-}
-  
-#wrapper-inner-div-form{
-	margin: auto;
-	width: 700px;
-}
-.form-wrapper-clear:after{
-	clear: both;
-	display: table;
-	content: "";
-}
-	
-.cls-form-left{
-	width: 250px;
-	float:left
-}
-
-.cls-form-right{
-	width: 300px;
-	float:left ; 
-	padding-left:30px; 
-}
-  
-}
-
-*/
-
-/* 
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
-
-@media (min-width: 1025px) and (max-width: 1480px) {
-  
-  
-.modal0 {
-  z-index: 3; /* Sit on top */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  display: none;
-  position: absolute;
-  top: 0% ;
-  width: 400px; 
-  height: 540px;
-  /*max-height: 100%;*/
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 0% auto; /* 15% from the top and centered */
-  padding: 0px;
-  /*border: 1px solid #888;*/
-  width: 100%; /* Could be more or less, depending on screen size */
-  position: relative;
-}
-
-.inner {
-  margin: 10% auto; /* 15% from the top and centered */
-  padding: 20px;
-  /*border: 1px solid #888;*/
-  width: 60%; /* Could be more or less, depending on screen size */
-  position: relative;
-  /*display: flex;*/
-  align-items: center;
-  height: 400px !important;
-}
-
-.inner-item{
-	text-align:center;
-	line-height: 10px;
-	
-}
-
-.inner-item-0{
-	margin: auto;
-	width: 50%;
-	padding: 10px;
-	/*height: 100px !important;*/
-}
-  
-  
-  
-  
-  
-  
-  
-}
-
 /* 
   ##Device = Tablets, Ipads (portrait)
   ##Screen = B/w 768px to 1024px
 */
-
 @media (min-width: 768px) and (max-width: 1024px) {
-  
-.container {
-  max-width: 700px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
+  .container {
+    max-width: 700px;
+  }
+  .modal0 {
+    width: 400px;
+    height: 540px;
+  }
+  .modal-content {
+    width: 100%;
+  }
+  .inner {
+    width: 60%;
+    position: relative;
+    align-items: center;
+  }
+  .inner-item {
+    line-height: 100px;
+  }
+  .inner-item-0 {
+    width: 50%;
+    padding-left: 0px;
+    padding-top: 10px;
+  }
 }
-
-
-.modal0 {
-  z-index: 3; /* Sit on top */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  display: none;
-  position: absolute;
-  top: 0% ;
-  width: 400px; 
-  height: 540px;
-  /*max-height: 100%;*/
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 0% auto; /* 15% from the top and centered */
-  padding: 0px;
-  /*border: 1px solid #888;*/
-  width: 100%; /* Could be more or less, depending on screen size */
-  position: relative;
-}
-
-.inner {
-  margin: 10% auto; /* 15% from the top and centered */
-  padding: 20px;
-  /*border: 1px solid #888;*/
-  width: 60%; /* Could be more or less, depending on screen size */
-  position: relative;
-  /*display: flex;*/
-  align-items: center;
-}
-
-.inner-item{
-	text-align:center;
-	line-height: 100px;
-	
-}
-
-.inner-item-0{
-	margin: auto;
-	width: 50%;
-	padding-left: 0px;
-	padding-top: 10px;
-	/*height: 100px !important;*/
-}
-  
-}
-
 /* 
   ##Device = Tablets, Ipads (landscape)
   ##Screen = B/w 768px to 1024px
 */
-
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  
-.container {
-  max-width: 700px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
+  .container {
+    max-width: 700px;
+  }
+  .modal0 {
+    width: 700px;
+    height: 540px;
+  }
+  .modal-content {
+    width: 100%;
+  }
+  .inner {
+    width: 60%;
+    height: 400px !important;
+  }
+  .inner-item {
+    line-height: 10px;
+  }
+  .inner-item-0 {
+    width: width-half-complete;
+    padding: 10px;
+  }
 }
-
-.modal0 {
-  z-index: 3; /* Sit on top */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  display: none;
-  position: absolute;
-  top: 0% ;
-  width: 700px; 
-  height: 540px;
-  /*max-height: 100%;*/
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 0% auto; /* 15% from the top and centered */
-  padding: 0px;
-  border: 1px solid white;
-  width: 100%; /* Could be more or less, depending on screen size */
-  position: relative;
-}
-
-.inner {
-  margin: 10% auto; /* 15% from the top and centered */
-  padding: 20px;
-  /*border: 1px solid #888;*/
-  width: 60%; /* Could be more or less, depending on screen size */
-  /*position: relative;*/
-  /*display: flex;*/
-  height:400px !important;
-  /*align-items: center;*/
-}
-
-.inner-item{
-	text-align:center;
-	line-height: 10px;
-	
-}
-
-
-  
-}
-
 /* 
   ##Device = Low Resolution Tablets, Mobiles (Landscape)
   ##Screen = B/w 481px to 767px
 */
-
 @media (min-width: 481px) and (max-width: 767px) {
-  
-  
-.modal0 {
-  z-index: 3; /* Sit on top */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  display: none;
-  position: absolute;
-  top: 0% ;
-  width: 400px; 
-  height: 540px;
-  /*max-height: 100%;*/
+  .container {
+    max-width: 400px;
+  }
+  .modal0 {
+    width: 400px;
+    height: 540px;
+  }
+  .modal-content {
+    width: 100%;
+  }
+  .inner {
+    width: 60%;
+    height: 460px !important;
+  }
+  .inner-item {
+    line-height: 30px;
+  }
+  .inner-item-0 {
+    width: 100%;
+    padding: 10px;
+  }
 }
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 0% auto; /* 15% from the top and centered */
-  padding: 0px;
-  border: 1px solid white;
-  width: 100%; /* Could be more or less, depending on screen size */
-  position: relative;
-}
-
-.inner {
-  margin: 10% auto; /* 15% from the top and centered */
-  padding: 20px;
-  /*border: 1px solid #888;*/
-  width: 60%; /* Could be more or less, depending on screen size */
-  /*position: relative;*/
-  height:460px !important;
-  /*display: flex;*/
-  /*align-content: center;
-  align-items: center;*/
-}
-
-
-.inner-item-0{
-	margin: auto;
-	width: 100%;
-	padding: 10px;
-}
-
-.inner-item{
-	text-align:center;
-	line-height: 30px;
-	
-}
-
-  
-  
-  
-.container {
-  max-width: 400px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-}
-  
-}
-
 /* 
   ##Device = Most of the Smartphones Mobiles (Portrait)
   ##Screen = B/w 320px to 479px
 */
-
 @media (min-width: 280px) and (max-width: 480px) {
-	
-.modal0 {
-  z-index: 3; /* Sit on top */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  display: none;
-  position: absolute;
-  top: 0% ;
-  width: 400px; 
-  height: 540px;
-  /*max-height: 100%;*/
+  .container {
+    max-width: 400px;
+  }
+  .modal0 {
+    width: 400px;
+    height: 540px;
+  }
+  .modal-content {
+    width: 100%;
+  }
+  .inner {
+    width: 60%;
+    height: 460px !important;
+  }
+  .inner-item {
+    line-height: 30px;
+  }
+  .inner-item-0 {
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+  }
 }
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 0% auto; /* 15% from the top and centered */
-  padding: 0px;
-  border: 1px solid white;
-  width: 100%; /* Could be more or less, depending on screen size */
-  position: relative;
-}
-
-.inner {
-  margin: 10% auto; /* 15% from the top and centered */
-  padding: 20px;
-  /*border: 1px solid #888;*/
-  width: 60%; /* Could be more or less, depending on screen size */
-  /*position: relative;*/
-  height:460px !important;
-  /*display: flex;*/
-  /*align-content: center;
-  align-items: center;*/
-}
-
-
-
-.inner-item-0{
-	margin: auto;
-	width: 100%;
-	padding: 10px;
-}
-
-.inner-item{
-	text-align:center;
-	line-height: 30px;
-	
-}
-  
-.container {
-  max-width: 400px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-}
-
-  
-}
-
