--- a/frontend_ecommerce/public/less/custom.less
+++ b/frontend_ecommerce/public/less/custom.less
@@ -9,10 +9,6 @@ img{
 	max-width: @width-complete;
 }
 
-input.modified-input::placeholder{
-  background-color: #bac7e8;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -175,23 +171,9 @@ fieldset {
   width: @width-complete;
 }
 
-/*
-::-webkit-input-placeholder {
-  color: #888;
+input.modified-input{
+  background-color: #bac7e8;
 }
-
-:-moz-placeholder {
-  color: #888;
-}
-
-::-moz-placeholder {
-  color: #888;
-}
-
-:-ms-input-placeholder {
-  color: #888;
-}
-*/
 
 /*############################################
 ###########  MEDIA QUERIES ###################	
