--- a/frontend_ecommerce/public/less/custom.less
+++ b/frontend_ecommerce/public/less/custom.less
@@ -172,7 +172,7 @@ fieldset {
 }
 
 input.modified-input{
-  background-color: #bac7e8;
+  background-color: #bac7e8 !important;
 }
 
 /*############################################
